# NC-Fusion

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: paper.json
docs/: ARTIFACT_APPENDIX.md
legacy/: README.md  baseline.py  circuit_generation_greedy.py  commuting_graph.py  compressor.py  docker.py  error_evaluation.py  grouping.py  new_gaussian.py  paths.py  reorder.py
legacy/phoenix/: __init__.py  basics.py  compiler.py  hamiltonian.py  utils.py
legacy/phoenix/primitive/: grouping.py  ordering.py  simplification.py  simplification_smt.py  utils.py
micro_artifact/: EXPERIMENTS.md  MISSING_IMPLEMENTATIONS.md  README.md  Superstaq_test.py  __init__.py  analytical_estimation.py  application_level_fidelity.py  common.py  components_abalation.py  data.py  error_common.py  from_qiskit.py  install_optimizers.py  optimizer_common.py  pauli_string_order_sensitivity.py  precision_abalation.py  pyzx.py  resource_estimators.py  single_qubit_result.py  space_volume_analysis.py  t_count_methods_comparison.py  t_count_optimizer_relative.py  trotter_error.py  two_qubit_result.py  window_size_sensitivity.py
micro_artifact/circuits/H2O/: H2O_ncf_fix_error_c+t.qasm  H2O_rustiq_c+t.qasm
micro_artifact/circuits/H2S/: H2S_grid_rz.qasm  H2S_rustiq_c+t.qasm
micro_artifact/circuits/Hei-2D-30/: Hei-2D-30_grid_c+t.qasm  Hei-2D-30_ncf_fix_error_c+t.qasm  Hei-2D-30_ncf_rz.qasm  Hei-2D-30_rustiq_c+t.qasm
micro_artifact/circuits/Hei-2D-60/: Hei-2D-60_grid_c+t.qasm  Hei-2D-60_ncf_c+t.qasm  Hei-2D-60_ncf_fix_error_c+t.qasm  Hei-2D-60_ncf_fix_error_rz.qasm  Hei-2D-60_rustiq_RZ.qasm
micro_artifact/circuits/Hei-3D-30/: Hei-3D-30_grid_rz.qasm  (+5 more)
micro_artifact/configs/: paper.json
micro_artifact/docs/: ARTIFACT_APPENDIX.md
micro_artifact/paper/: README.md
micro_artifact/results/: README.md
paper/: README.md
results/: README.md
src/ncfusion/: __init__.py  api.py  cli.py  legacy.py  metrics.py  pauli.py  runner.py  spec.py
(+149 files in other folders)
